# SM2-adaptor-signature

ECDSA-AS-test/: CMakeLists.txt  README.md
ECDSA-AS-test/global/: global.hpp
ECDSA-AS-test/src/: ECDSA_AS.hpp
ECDSA-AS-test/test/: make_test_ECDSA_AS.sh  test_ECDSA_AS.cpp
SM2-AS-offline-test/: CMakeLists.txt  README.md
SM2-AS-offline-test/depends/: hash.hpp
SM2-AS-offline-test/src/: SM2_AS_offline.hpp
SM2-AS-offline-test/test/: make_test_SM2_AS_offline.sh  test_SM2_AS_offline.cpp
SM2-AS-our-test/: CMakeLists.txt  README.md
SM2-AS-our-test/global/: global.hpp
SM2-AS-our-test/src/: SM2_AS_our.hpp
SM2-AS-our-test/test/: make_test_SM2_AS_our.sh  test_SM2_AS_our.cpp
SM2-AS-test/: CMakeLists.txt  README.md
SM2-AS-test/depends/: print.hpp  routines.hpp
SM2-AS-test/src/: SM2_AS.hpp
SM2-AS-test/test/: make_test_SM2_AS.sh  test_SM2_AS.cpp
